<resources>
    <string name="app_name">Capstone</string>
    <string name="vehicle_expenses_tacking">Vehicle Expenses Tracking</string>
    <string name="creator">by George Vrynios</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="no_instances_for_you">No Instances for you!</string>
    <string name="missing_xml_layout">Missing XML layout!</string>
    <string name="dashboard_xml_layout">Dashboard XML layout!</string>
    <string name="insert_fake_data">Insert fake data into the database&#8230; Please wait!</string>
    <string name="finished_inserting_fake_data">Fake data inserted successfully</string>
    <string name="inserting_fake_data_failed">Inserting fake data failed</string>
    <string name="failed_to_insert_vehicles">Failed to insert Vehicles</string>
    <string name="failed_to_insert_expenses">Failed to insert Expenses</string>
    <string name="failed_to_reset_sqlite_sequences">Failed to reset Sqlite Sequences</string>
    <string name="you_broke_up_the_app">Dear developer, you broke up the app, restart a full working Baking App and see the magic happens on my widgets ;)</string>
    <string name="will_be_set_at_runtime">This is a message set by the app</string>
    <string name="failed_to_insert_row_into">Failed to insert row into: </string>
    <string name="unknown_uri">Unknown URI: </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="refresh">Refresh</string>
    <string name="error_check_your_network_connectivity">Please check your network connectivity!</string>
    <string name="youtube_player_not_found">An associated YouTube player couldn\'t be found!</string>
    <string name="activity_error_message_missing_extras">Missing extra data for activity %1$s</string>
    <string name="gallery_not_found">An associated Gallery application couldn\'t be found!</string>
    <string name="permission_for_reading_the_external_storage_not_granted">Permission for reading the external storage not granted. Vehicle Images can\'t displayed</string>
    <string name="enable_permission_for_reading_the_external_storage">Vehicle Images can only be displayed, if storage permission is granted via the settings.</string>
    <string name="form_validation_failed">Invalid data in form fields, see the errors to correct them.</string>
    <string name="abord_editing">... to abort editing, discard changes and return</string>
    <string name="tap_to_refresh">Tap to refresh</string>
    <string name="tap_to_accept_the_date">Tap to accept the date</string>
    <string name="invalid_api_key">Invalid API key</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_vehicles_list">Vehicles List</string>
    <string name="nav_expenses_list">Expenses List</string>
    <string name="nav_search_youtube">Search Youtube</string>
    <string name="nav_database_utilities">Database utilities</string>
    <string name="nav_db_fill_fake_data">Fill database with fake data</string>
    <string name="up">Up</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_vehicle_list">Vehicle List</string>
    <string name="title_activity_vehicle_entity">Vehicle</string>
    <string name="title_activity_expenses_list">Expenses List</string>
    <string name="title_activity_expenses_entity">Expenses</string>
    <string name="title_activity_search_youtube">Search Youtube</string>
    <string name="title_activity_favorite_videos">Favorite Videos</string>
    <string name="no_vehicles_available">No Vehicles Available</string>
    <string name="add_new_vehicle">Add new vehicle</string>
    <string name="hint_vehicle_name">Vehicle\'s Name</string>
    <string name="hint_vehicle_make">Make</string>
    <string name="hint_vehicle_model">Model</string>
    <string name="hint_vehicle_plateno">PlateNo</string>
    <string name="hint_vehicle_initmileage">Initial Mileage</string>
    <string name="hint_vehicle_tankvolume">Tank Volume</string>
    <string name="hint_vehicle_notes">Notes</string>
    <string name="vehicle_screen_ready_for_new_record">Screen ready to enter data for a new vehicle</string>
    <string name="vehicle_screen_ready_for_edit_record">Screen ready to edit vehicle data</string>
    <string name="add_or_replace_vehicle_image">Add or replace vehicle image</string>
    <string name="couldnt_insert_vehicle">Couldn\'t insert the Vehicle</string>
    <string name="vehicle_added">Vehicle added: </string>
    <string name="vehicles_data_updated">Vehicle updated</string>
    <string name="to_much_vehicles_updated">TO MUCH VEHICLES UPDATED</string>
    <string name="vehicles_data_not_updated">Something went wrong, vehicle\'s data were not updated!</string>
    <string name="deleted_vehicle">Vehicle is deleted</string>
    <string name="question_delete_vehicle">Delete Vehicle and its Expenses?</string>
    <string name="validation_enter_name">Name is required</string>
    <string name="validation_enter_make">Make is required</string>
    <string name="validation_enter_model">Model is required</string>
    <string name="validation_wrong_number">Wrong Number</string>
    <string name="no_expenses_available">No Expenses Available</string>
    <string name="add_new_expense">Add new expense</string>
    <string name="vehicle_spinner_label">Vehicle</string>
    <string name="expense_type_spinner_label">Type</string>
    <string name="subtype_spinner_label">Subtype</string>
    <string name="hint_expense_date">Date</string>
    <string name="hint_expense_odometer">Odometer</string>
    <string name="hint_fuel_quantity">Fuel Quantity</string>
    <string name="hint_expense_amount">Amount</string>
    <string name="hint_expense_notes">Notes</string>
    <string name="couldnt_insert_expense">Couldn\'t insert the Expense</string>
    <string name="expense_added">Expense added: </string>
    <string name="expenses_data_updated">Expense updated</string>
    <string name="to_much_expenses_updated">TO MUCH EXPENSES UPDATED</string>
    <string name="expenses_data_not_updated">Something went wrong, expense\'s data were not updated!</string>
    <string name="deleted_expense">Expense is deleted</string>
    <string name="question_delete_expense">Delete Expense?</string>
    <string name="enter_vehicles_first">Hurry up! Enter some vehicles for the beginning. Then come back here ...</string>
    <string name="click_to_open_the_date_picker">Click to open the date picker</string>
    <string name="no_video_results">No video results</string>
    <string name="no_video_results_for">No video results for</string>
    <string name="youtube_search">Search</string>
    <string name="video_playback">video playback</string>
    <string name="no_dashboard_data_available">No Data</string>
    <string name="total_running_costs">%1$s - Total Running Costs</string>
    <string name="dashboard_driven_title">%1$s Driven</string>
    <string name="dashboard_total_cost_title">Total Cost</string>
    <string name="dashboard_total_fuel_title">Total</string>
    <string name="dashboard_fuel_per100_title">%1$s/100 %2$s</string>
    <string name="dashboard_cost_per100_title">cost/100 %1$s</string>
    <string name="dashboard_parking_title">Parking</string>
    <string name="dashboard_toll_title">Toll</string>
    <string name="dashboard_insurance_title">Insurance</string>
    <string name="dashboard_total_title">Total</string>
    <string name="dashboard_basic_title">Basic</string>
    <string name="dashboard_damage_title">Damage</string>
    <string name="dashboard_refuel_title">Refuel</string>
    <string name="dashboard_expenses_title">Expenses</string>
    <string name="dashboard_service_title">Service</string>
    <string name="dashboard_total_liters">Total Liters</string>
    <string name="select_vehicle_for_widget">Select Vehicle for Widget</string>
    <string name="_x_select_image_source">Select Image Source</string>
    <string name="error_while_creating_file">Error occurred while creating the Image File</string>
    <string name="date_picker_accept">Accept</string>
    <string name="date_picker_title">GV Title GV</string>
    <string name="ga_dashboard">Dashboard</string>
    <string name="ga_vehicle_list">Vehicle List</string>
    <string name="ga_expenses_list">Expenses List</string>
    <string name="ga_youtube_search">YouToube Search</string>
</resources>