<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_vehicles_list"
            android:icon="@drawable/ic_menu_vehicle_list"
            android:title="@string/nav_vehicles_list" />
        <item
            android:id="@+id/nav_expenses_list"
            android:icon="@drawable/ic_menu_expenses_list"
            android:title="@string/nav_expenses_list" />
        <item
            android:id="@+id/nav_search_youtube"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_search_youtube" />
    </group>

    <item
        android:id="@+id/nav_database_utilities"
        android:title="@string/nav_database_utilities"
        android:visible="true"
        >
        <menu>
            <item
                android:id="@+id/nav_db_fill_fake_data"
                android:icon="@drawable/ic_menu_fill_fake_data"
                android:title="@string/nav_db_fill_fake_data" />
        </menu>
    </item>
</menu>
