<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aiassoft.capstone.activities.VehicleEntity"
    >

    <!-- name -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_vehicle_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <android.support.design.widget.TextInputEditText
            android:id="@+id/name"
            style="@style/EditFieldsTextSingleLine"
            />

    </android.support.design.widget.TextInputLayout>

    <!-- make -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/make_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_vehicle_make"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/make"
            style="@style/EditFieldsTextSingleLine"
            />

    </android.support.design.widget.TextInputLayout>

    <!-- model -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/model_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_vehicle_model"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/model"
            style="@style/EditFieldsTextSingleLine"
            />

    </android.support.design.widget.TextInputLayout>

    <!-- plateno -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/plateno_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_vehicle_plateno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/model_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/plateno"
            style="@style/EditFieldsTextSingleLine"
            />

    </android.support.design.widget.TextInputLayout>

    <!-- initmilage -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/initial_mileage_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_vehicle_initmileage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plateno_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/initial_mileage"
            style="@style/EditFieldsTextSingleLine"
            />

    </android.support.design.widget.TextInputLayout>

    <!-- tankvolume -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tank_volume_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_vehicle_tankvolume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initial_mileage_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tank_volume"
            style="@style/EditFieldsTextSingleLine"
            />

    </android.support.design.widget.TextInputLayout>

    <!-- notes -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/notes_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_vehicle_notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tank_volume_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/notes"
            style="@style/EditFieldsTextMultiLine"
            />

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>