<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ExpensesEntityActivity"
    >

    <!-- vehicle -->
    <TextView
        android:id="@+id/vehicle_spinner_label"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_spinner_label"
        style="@style/SpinnerLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <!-- The waiting spinner -->
    <ProgressBar
        android:id="@+id/loading_indicator"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@id/vehicle_spinner_label"
        app:layout_constraintTop_toTopOf="@id/vehicle_spinner_label" />
    <Spinner
        android:id="@+id/vehicle_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@id/vehicle_spinner_label"
        app:layout_constraintTop_toTopOf="@id/vehicle_spinner_label"
        android:visibility="invisible"
        />

    <!-- expense type -->
    <TextView
        android:id="@+id/expense_type_spinner_label"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        style="@style/SpinnerLabel"
        android:text="@string/expense_type_spinner_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_spinner"
        />
    <Spinner
        android:id="@+id/expense_type_spinner"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@id/expense_type_spinner_label"
        app:layout_constraintTop_toTopOf="@+id/expense_type_spinner_label"
        />

    <!-- subtype -->
    <TextView
        android:id="@+id/subtype_spinner_label"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        style="@style/SpinnerLabel"
        android:text="@string/subtype_spinner_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_type_spinner_label"
        />
    <Spinner
        android:id="@+id/subtype_spinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@id/subtype_spinner_label"
        app:layout_constraintTop_toTopOf="@+id/subtype_spinner_label"
        />

    <!-- date -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/date_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_expense_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtype_spinner"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/date"
            android:inputType="textMultiLine"
            style="@style/EditFieldsTextSingleLine"
            android:layout_width="120dp"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_open_date_picker"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ic_calendar_24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/date_wrapper"
        app:layout_constraintBottom_toBottomOf="@+id/date_wrapper"
        />

    <!-- odometer -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/odometer_wrapper"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_expense_odometer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_wrapper"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/odometer"
            android:inputType="number"
            style="@style/EditFieldsTextSingleLine"
            />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/distance_unit"
        style="@style/LabelFields"
        android:layout_width="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/odometer_wrapper"
        app:layout_constraintBottom_toBottomOf="@+id/odometer_wrapper"
        android:text="Kilometers"
        />

    <!-- fuelQuantity -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/fuel_quantity_wrapper"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_fuel_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/odometer_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fuel_quantity"
            android:inputType="numberDecimal"
            style="@style/EditFieldsTextSingleLine"
            />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/volume_unit"
        style="@style/LabelFields"
        android:layout_width="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/fuel_quantity_wrapper"
        app:layout_constraintBottom_toBottomOf="@+id/fuel_quantity_wrapper"
        android:text="liters"
        />

    <!-- amount -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/amount_wrapper"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_expense_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuel_quantity_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/amount"
            android:inputType="numberDecimal"
            style="@style/EditFieldsTextSingleLine"
            />

    </android.support.design.widget.TextInputLayout>

    <!-- notes -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/notes_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_expense_notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/notes"
            style="@style/EditFieldsTextMultiLine"
            />

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>